# matchest

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml  ruff_defaults.toml
docs/: Makefile
docs/source/: conf.py  index.md
docs/source/aiida/: index.md  utilities.md  workflows.md  workgraphs.md
docs/source/api/: index.md
docs/source/cli/: castep_tools.md  index.md  kpoints.md  reference.md  structure_tools.md  vasp_tools.md
docs/source/getting_started/: index.md  installation.md  quickstart.md
src/matchest/: __about__.py  __init__.py  casteputils.py  dielectric.py  dotcastep.py
src/matchest/aiida_utils/: __init__.py  aseutils.py  maceutils.py  pmg.py  vasp.py
src/matchest/aiida_utils/process/: battery.py  transformation.py
src/matchest/aiida_utils/workflows/: __init__.py  elastic.py  simple_vac.py
src/matchest/aiida_utils/workgraphs/: __init__.py  phono3py.py
src/matchest/cli/: geomconv.py  kpoints.py  main.py  structure.py  vaspcheck.py
src/matchest/utils/: kmesh.py
tests/: README.md  conftest.py  test_vaspcheck.py
tests/fixtures/basic_calculation/: INCAR  POSCAR  POTCAR
tests/fixtures/large_calculation/: INCAR  KPOINTS  POSCAR
tests/fixtures/multi_calc_directory/calc1/: INCAR  KPOINTS  POSCAR  POTCAR
tests/fixtures/multi_calc_directory/calc2/: INCAR  KPOINTS  POSCAR
tests/fixtures/parallelization_issues/: INCAR  KPOINTS  POSCAR  POTCAR
tests/fixtures/small_calculation/: INCAR  KPOINTS  POSCAR
